--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -1269,6 +1269,9 @@ input[type="checkbox"]:disabled + span::before {
 .opinion__card {
 	background: #FFF;
 	border-radius: 1.5625rem;
+	display: flex;
+	flex-direction: column;
+	height: auto;
 	max-width: 23.4375rem;
 	padding-bottom: 2.75rem;
 	padding-left: 1.375rem;
@@ -1282,9 +1285,15 @@ input[type="checkbox"]:disabled + span::before {
 	margin-right: 1.25rem;
 }
 
-.opinion__picture img {
-	margin: auto;
+.opinion__picture {
+	margin: 0 auto;
 	max-width: 11.9375rem;
+	width: 100%;
+}
+
+.opinion__picture img {
+	-o-object-fit: cover;
+	object-fit: cover;
 	width: 100%;
 }
 
