--- a/sass/module/_b-btn.scss
+++ b/sass/module/_b-btn.scss
@@ -1,4 +1,9 @@
 .b-btn {
+    font-size: rem(20);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     border-radius: rem(50);
     position: relative;
 }
