--- a/sass/module/_btn.scss
+++ b/sass/module/_btn.scss
@@ -14,9 +14,14 @@
     border-radius: rem(15);
 }
 
+.btn__inner:hover {
+    opacity: 0.7;
+}
+
 .btn__box {
     display: flex;
     align-items: center;
+    justify-content: center;
     word-wrap: break-word;
 }
 
@@ -34,8 +39,9 @@
 }
 
 .btn__text span {
+    font-size: rem(18);
     position: absolute;
-    top: rem(40);
-    right: rem(10);
+    top: 50%;
+    right: 5%;
     transform: translate(-50%, -50%);
 }
