--- a/sass/page/beginner/_recommendation.scss
+++ b/sass/page/beginner/_recommendation.scss
@@ -36,9 +36,11 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    
+
     @include mq("sp") {
         display: flex;
+        align-items: flex-start;
+        justify-content:start;
         flex-wrap: wrap;
     }
 }
@@ -48,6 +50,7 @@
     margin-top: rem(50);
 
     @include mq("sp") {
+        flex-direction: column;
         max-width: none;
         width: calc(50% - #{rem(13)});
         margin-right: rem(25);
@@ -63,6 +66,14 @@
 }
 
 .recommendation__box:nth-child(2n) {
+
+    @include mq("sp") {
+        margin-right: rem(0);
+    }
+}
+
+
+.recommendation__box:last-child {
 
     @include mq("sp") {
         margin-right: rem(0);
