--- a/sass/page/information/_company.scss
+++ b/sass/page/information/_company.scss
@@ -43,16 +43,20 @@
 
 .company__td {
     border-bottom: rem(1) solid #000;
-    font-size: rem(16);
     width: 20%;
     font-weight: $bold;
     text-align: center;
-    width: rem(169);
-    font-size: rem(19);
+    max-width: rem(169);
+    font-size: rem(18);
+
+    @include mq("sp") {
+        width: 30%;
+    }
 
 }
 
 .company__th {
+    width: 80%;
     text-align: left;
     border-bottom: rem(1) solid $rightgray;
     padding-left: rem(20);
@@ -61,7 +65,7 @@
     line-height: 1.17;
 
     @include mq("sp") {
-        font-size: rem(16);
+        font-size: rem(14);
     }
 }
 
@@ -81,4 +85,19 @@
 
 .company__th:last-child {
     line-height: 2.11111;
+}
+
+.company__br {
+    display: none;
+
+    @include mq("sp") {
+        display: block;
+    }
+}
+
+.company__th span {
+
+    @include mq("sp") {
+        display: none;
+    }
 }
