--- a/sass/style.scss
+++ b/sass/style.scss
@@ -46,4 +46,7 @@
 @import "page/information/facility";
 @import "page/information/company";
 @import "page/information/staf";
+@import "page/archive/archive-list";
+@import "page/single/single";
+@import "page/error/error";
 @import "utility/hidden";
