--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -443,6 +443,7 @@ input[type="checkbox"]:disabled + span::before {
 	align-items: center;
 	display: flex;
 	height: inherit;
+	position: relative;
 }
 
 .btn__sub {
@@ -453,17 +454,16 @@ input[type="checkbox"]:disabled + span::before {
 	align-items: center;
 	display: flex;
 	justify-content: space-between;
-	position: relative;
 	width: 100%;
 }
 
-.header__btn--leyout {
-	margin-right: 5rem;
-}
-
-.header__right {
+.header__btn {
 	align-items: center;
 	display: flex;
+	justify-content: right;
+	margin-right: 5rem;
+	max-width: 30.9375rem;
+	width: 100%;
 }
 
 .logo {
@@ -491,7 +491,7 @@ input[type="checkbox"]:disabled + span::before {
 	position: absolute;
 	right: 0.625rem;
 	text-align: center;
-	top: 1.5625rem;
+	top: 2.375rem;
 	width: 2.625rem;
 	z-index: 3;
 }
@@ -525,13 +525,13 @@ input[type="checkbox"]:disabled + span::before {
 
 .header__hamburger-button.active span:nth-child(1) {
 	left: 0.375rem;
-	top: 1rem;
+	top: 0.875rem;
 	transform: rotate(-45deg);
 }
 
 .header__hamburger-button.active span:nth-child(2),
 .header__hamburger-button.active span:nth-child(3) {
-	top: 16px;
+	top: 0.875rem;
 	transform: rotate(45deg);
 }
 
@@ -567,6 +567,7 @@ input[type="checkbox"]:disabled + span::before {
 }
 
 .instagram {
+	height: auto;
 	width: 4.25rem;
 }
 
@@ -586,10 +587,15 @@ input[type="checkbox"]:disabled + span::before {
 	padding-top: 1.53125rem;
 }
 
+.btn__inner:hover {
+	opacity: 0.7;
+}
+
 .btn__box {
 	word-wrap: break-word;
 	align-items: center;
 	display: flex;
+	justify-content: center;
 }
 
 .btn__box img {
@@ -606,15 +612,21 @@ input[type="checkbox"]:disabled + span::before {
 }
 
 .btn__text span {
+	font-size: 1.125rem;
 	position: absolute;
-	right: 0.625rem;
-	top: 2.5rem;
+	right: 5%;
+	top: 50%;
 	transform: translate(-50%, -50%);
 }
 
 .b-btn {
+	align-items: center;
 	border-radius: 3.125rem;
+	display: flex;
+	font-size: 1.25rem;
+	justify-content: center;
 	position: relative;
+	text-align: center;
 }
 
 .b-btn__text {
@@ -672,45 +684,97 @@ input[type="checkbox"]:disabled + span::before {
 	width: 100%;
 }
 
-.footer__mail-btn,
-.footer__tell-box {
+.footer__mail-btn {
+	align-items: center;
+	display: flex;
+	justify-content: center;
 	max-width: 53.125rem;
 	width: 100%;
 }
 
 .footer__mail-btn {
-	padding-right: 2.4375rem;
+	align-items: center;
+	background-color: #FFF;
+	box-shadow: 0px 5px 16px 2px rgba(0, 0, 0, 0.13);
+	display: flex;
+	justify-content: center;
+	margin-right: 4.875rem;
 }
 
 .footer__tell-box {
-	padding-left: 2.4375rem;
+	max-width: 53.125rem;
+	width: 100%;
 }
 
-.footer__mail-btn a {
-	padding: 2.68463rem 0rem;
+.footer__mail-btn:hover,
+.footer__tell-btn:hover {
+	opacity: 0.7;
 }
 
-.footer__tell-btn a {
-	padding: 2rem 0rem;
+.footer__tell-btn {
+	align-items: center;
+	background-color: #FFF;
+	box-shadow: 0px 5px 16px 2px rgba(0, 0, 0, 0.13);
+	display: flex;
+	justify-content: center;
 }
 
 .footer__mail-btn a,
 .footer__tell-btn a {
 	align-items: center;
-	background: #FFF;
 	border-radius: 6.25rem;
 	display: flex;
 	justify-content: center;
+	padding: 2rem 0rem;
+	width: 53.125rem;
+	width: 100%;
 }
 
-.footer__mail-icon img,
-.footer__tell-icon img {
-	height: auto;
+.footer__beauty-icon {
+	display: inline-block;
+	height: 3.125rem;
+	max-width: 3.3125rem;
+	width: 100%;
+}
+
+.footer__beauty-icon img {
+	height: 3.125rem;
+	max-width: 3.3125rem;
+	width: 100%;
+}
+
+.footer__tell-icon {
+	display: inline-block;
+	height: 3.125rem;
 	max-width: 2.75rem;
 	width: 100%;
 }
 
+.footer__tell-icon img {
+	height: 3.125rem;
+	max-width: 2.75rem;
+	width: 100%;
+}
+
+.footer__mail-icon {
+	display: inline-block;
+	display: flex;
+	height: 3.125rem;
+	justify-content: center;
+	max-width: 2.75rem;
+	text-align: center;
+	width: 100%;
+}
+
+.footer__mail-icon img {
+	height: 2.5rem;
+	margin-top: 0.3125rem;
+	width: 100%;
+}
+
 .footer__btn-text {
+	font-size: 1.25rem;
+	font-weight: 500;
 	padding-left: 1.875rem;
 }
 
@@ -1198,20 +1262,16 @@ input[type="checkbox"]:disabled + span::before {
 
 .news__container {
 	padding-bottom: 3.6875rem;
-	padding-top: 5.9375rem;
 }
 
 .news__content {
 	margin-bottom: 1.875rem;
 }
 
-.news__content:last-child {
-	margin-bottom: 0rem;
-}
-
 .news__title {
 	font-size: 2rem;
 	font-weight: 400;
+	padding-bottom: 5.625rem;
 	text-align: center;
 }
 
@@ -1229,23 +1289,34 @@ input[type="checkbox"]:disabled + span::before {
 	padding: 0.1875rem 1.5625rem;
 }
 
-.news__comment {
+.news__heading {
 	border-bottom: 0.0625rem solid #707070;
-	font-size: 1.375rem;
+	font-size: 1.25rem;
+	font-weight: 400;
 	padding-bottom: 1.4375rem;
 	padding-top: 1.0625rem;
 }
 
-.news__btn {
+.news__btn-box {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+}
+
+.news__btn--color {
 	background: #FF9D80;
-	margin: auto;
+	color: #FFF;
+}
+
+.news__btn {
+	border-radius: 3.125rem;
 	max-width: 40rem;
 	padding: 1.25rem 0rem;
 	width: 100%;
 }
 
-.news__text--color {
-	color: #FFF;
+.news__btn:hover {
+	opacity: 0.7;
 }
 
 .opinion__inner {
@@ -1267,11 +1338,12 @@ input[type="checkbox"]:disabled + span::before {
 }
 
 .opinion__card {
+	align-items: center;
 	background: #FFF;
 	border-radius: 1.5625rem;
 	display: flex;
 	flex-direction: column;
-	height: auto;
+	margin: 0 auto;
 	max-width: 23.4375rem;
 	padding-bottom: 2.75rem;
 	padding-left: 1.375rem;
@@ -1328,7 +1400,6 @@ input[type="checkbox"]:disabled + span::before {
 }
 
 .flow__title {
-	border-bottom: 0.1875rem solid #333;
 	border-width: 0.125rem;
 	font-size: 2rem;
 	font-weight: 500;
@@ -1340,12 +1411,25 @@ input[type="checkbox"]:disabled + span::before {
 	top: 0;
 }
 
-.flow__btn {
+.flow__btn-box {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+}
+
+.flow__btn--color {
 	background: #FF9D80;
-	margin: auto;
+}
+
+.flow__btn {
+	border-radius: 3.125rem;
 	max-width: 40rem;
 	padding: 1.25rem 0rem;
 	width: 100%;
+}
+
+.flow__btn:hover {
+	opacity: 0.7;
 }
 
 .flow__text {
@@ -1420,8 +1504,12 @@ input[type="checkbox"]:disabled + span::before {
 	text-align: center;
 }
 
+.content__btn-box {
+	margin-top: auto;
+}
+
 .content__box:nth-child(3) .content__text {
-	padding-bottom: 9.64875rem;
+	padding-bottom: 9.64888rem;
 }
 
 .content__text {
@@ -1437,17 +1525,28 @@ input[type="checkbox"]:disabled + span::before {
 	width: 100%;
 }
 
+.content__btn-box {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+}
+
+.content__btn--color {
+	background: #FFF;
+	color: #FF9D80;
+}
+
 .content__btn {
-	background: white;
-	box-shadow: 6px 6px 10px 0px rgba(0, 0, 0, 0.16);
-	margin: 0 auto;
+	border-radius: 3.125rem;
+	box-shadow: 0px 5px 16px 2px rgba(0, 0, 0, 0.16);
 	max-width: 27.1875rem;
 	padding: 1.25rem 0rem;
 	width: 100%;
 }
 
-.content__text--color {
-	color: #FF9D80;
+.content__btn:hover {
+	border-color: transparent;
+	box-shadow: 0 1px 10px rgba(0, 0, 0, 0.5), 0 0 50px rgba(128, 128, 128, 0.6);
 }
 
 .beginner-sub {
@@ -1718,6 +1817,26 @@ input[type="checkbox"]:disabled + span::before {
 	right: 0;
 	top: 0;
 	width: 100%;
+}
+
+.receive__btn {
+	background: #FF9D80;
+	margin: auto;
+	max-width: 40rem;
+	padding: 1.25rem 0rem;
+	width: 100%;
+}
+
+.receive__text {
+	font-size: 1rem;
+	line-height: 2.125;
+	padding-bottom: 2.75rem;
+	padding-top: 3.1875rem;
+	text-align: center;
+}
+
+.receive__btn:hover {
+	opacity: 0.7;
 }
 
 .self-sub {
@@ -2073,6 +2192,10 @@ input[type="checkbox"]:disabled + span::before {
 .effect-list__list {
 	display: flex;
 	flex-wrap: wrap;
+	margin: auto;
+	max-width: 50rem;
+	padding-top: 1.875rem;
+	width: 100%;
 }
 
 .effect-list__item {
@@ -2186,11 +2309,15 @@ input[type="checkbox"]:disabled + span::before {
 }
 
 .moneytable__box {
-	align-items: center;
+	align-items: flex-start;
 	display: flex;
 	line-height: 1.7;
 	padding-bottom: 1.875rem;
 	width: 100%;
+}
+
+.moneytable__box:last-child {
+	padding-bottom: 0rem;
 }
 
 .moneytable__number {
@@ -2523,12 +2650,11 @@ input[type="checkbox"]:disabled + span::before {
 
 .company__td {
 	border-bottom: 0.0625rem solid #000;
-	font-size: 1rem;
-	font-size: 1.1875rem;
+	font-size: 1.125rem;
 	font-weight: 700;
+	max-width: 10.5625rem;
 	text-align: center;
 	width: 20%;
-	width: 10.5625rem;
 }
 
 .company__th {
@@ -2538,6 +2664,7 @@ input[type="checkbox"]:disabled + span::before {
 	line-height: 1.17;
 	padding-left: 1.25rem;
 	text-align: left;
+	width: 80%;
 }
 
 .company__map {
@@ -2555,6 +2682,10 @@ input[type="checkbox"]:disabled + span::before {
 
 .company__th:last-child {
 	line-height: 2.11111;
+}
+
+.company__br {
+	display: none;
 }
 
 .staf__inner {
@@ -2638,6 +2769,143 @@ input[type="checkbox"]:disabled + span::before {
 	line-height: 2.175;
 }
 
+.archive-list__inner {
+	margin: auto;
+	max-width: 95rem;
+	padding-left: 100px;
+	padding-right: 100px;
+	padding-top: 10rem;
+	width: 100%;
+}
+
+.pagination__warp {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+}
+
+.wp-pagenavi {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 2.5rem;
+	max-width: 62.5rem;
+	width: 100%;
+}
+
+.wp-pagenavi a,
+.wp-pagenavi span {
+	padding: 1.25rem 1.5625rem;
+}
+
+.last,
+.larger,
+.current,
+.nextpostslink,
+.smaller,
+.page,
+.first,
+.previouspostslink {
+	font-size: 1.25rem;
+}
+
+.extend {
+	display: none;
+}
+
+.single__inner {
+	margin: auto;
+	max-width: 75rem;
+	padding-left: 100px;
+	padding-right: 100px;
+	padding-top: 6.25rem;
+	width: 100%;
+}
+
+.single__day {
+	font-size: 1rem;
+}
+
+.single__title {
+	border-bottom: 0.0625rem solid #333;
+	font-size: 2.25rem;
+	font-weight: 500;
+	padding-bottom: 1.5rem;
+	padding-top: 0.625rem;
+}
+
+.single__wrap {
+	padding-top: 3.75rem;
+}
+
+.single__wrap h2:first-child {
+	margin-top: 0rem;
+}
+
+.single__wrap h2 {
+	font-size: 1.875rem;
+	margin-top: 3.75rem;
+}
+
+.single__wrap h3 {
+	font-size: 1.5rem;
+	margin-top: 3.125rem;
+}
+
+.single__wrap h4 {
+	font-size: 1rem;
+	margin-top: 2.625rem;
+}
+
+.single__wrap h5 {
+	font-size: 0.875rem;
+	margin-top: 2.25rem;
+}
+
+.single__wrap h6 {
+	font-size: 0.75rem;
+	margin-top: 1.75rem;
+}
+
+.single__wrap p {
+	font-size: 1rem;
+	list-style-position: 0.5em;
+	margin-top: 2.25rem;
+}
+
+.single__wrap img {
+	-o-object-fit: cover;
+	height: auto;
+	margin: auto;
+	max-width: 62.5rem;
+	object-fit: cover;
+	width: 100%;
+}
+
+.error__main {
+	margin: auto;
+	max-width: 95rem;
+	padding-left: 100px;
+	padding-right: 100px;
+	width: 100%;
+}
+
+.error__container {
+	padding-top: 10rem;
+	text-align: center;
+}
+
+.error__container h1 {
+	font-size: 3.75rem;
+}
+
+.error__container p {
+	font-size: 2.25rem;
+	padding-top: 0.625rem;
+}
+
 @media (prefers-reduced-motion: reduce) {
 
 html:focus-within {
@@ -2653,6 +2921,16 @@ html:focus-within {
 	animation-iteration-count: 1 !important;
 	scroll-behavior: auto !important;
 	transition-duration: 0.01ms !important;
+}
+
+}
+
+@media (min-width: 751px) {
+
+a[href*="tel:"] {
+	cursor: default;
+	pointer-events: none;
+	text-decoration: none;
 }
 
 }
@@ -2691,6 +2969,11 @@ html {
 	display: none;
 }
 
+.header__btn {
+	max-width: none;
+	width: auto;
+}
+
 .logo {
 	margin-right: 0rem;
 	width: 10rem;
@@ -2698,13 +2981,13 @@ html {
 
 .instagram {
 	height: auto;
-	margin-right: 4.375rem;
+	margin-right: -0.9375rem;
 	width: 1.75rem;
 }
 
 .header__hamburger-button {
 	right: 0.5rem;
-	top: 0.3125rem;
+	top: 1.5rem;
 }
 
 .header__hamburger-button span {
@@ -2724,7 +3007,7 @@ html {
 }
 
 .ttl {
-	font-size: 1.75rem;
+	font-size: 1.5rem;
 }
 
 .footer__inner {
@@ -2740,40 +3023,66 @@ html {
 	padding-top: 3.125rem;
 }
 
-.footer__mail-btn,
-.footer__tell-box {
+.footer__mail-btn {
 	max-width: none;
 }
 
 .footer__mail-btn {
-	padding-right: 0rem;
+	margin-right: 0rem;
 }
 
-.footer__tell-box {
-	padding-left: 0rem;
-}
-
-.footer__mail-btn a {
-	padding: 1.93463rem 1.25rem;
-}
-
+.footer__mail-btn a,
 .footer__tell-btn a {
-	padding: 1.25rem 0rem;
+	padding: 1.25rem 1.25rem;
 }
 
-.footer__mail-icon img,
-.footer__tell-icon img {
+.footer__beauty-icon {
+	height: 2.5rem;
+	max-width: 2.5rem;
+}
+
+.footer__beauty-icon img {
+	height: 2.5rem;
+	margin: auto;
+	max-width: 2.5rem;
+}
+
+.footer__tell-icon {
+	height: 2.5rem;
 	max-width: 1.875rem;
 }
 
+.footer__tell-icon img {
+	height: 2.5rem;
+	max-width: 1.875rem;
+	width: 100%;
+}
+
+.footer__mail-icon {
+	height: 2.5rem;
+	max-width: 2.125rem;
+}
+
+.footer__mail-icon img {
+	height: 1.5rem;
+	margin: auto;
+	max-width: 2.125rem;
+}
+
+.footer__btn-text {
+	font-size: 1rem;
+	padding-left: 1.25rem;
+}
+
 .footer__tell-text {
+	font-size: 0.75rem;
 	line-height: 1.7;
 	padding: 1.25rem 0rem;
 }
 
 .footer__wrap {
 	display: block;
-	padding-bottom: 3.75rem;
+	padding-bottom: 0rem;
 	padding-left: 20px;
 	padding-right: 20px;
 	padding-top: 3.125rem;
@@ -2809,6 +3118,10 @@ html {
 	padding-left: 20px;
 	padding-right: 20px;
 	text-align: center;
+}
+
+.title-logo {
+	max-width: 2.875rem;
 }
 
 .effect__title {
@@ -2854,16 +3167,16 @@ html {
 }
 
 .c-card__inner {
+	padding-bottom: 3.75rem;
 	padding-left: 20px;
 	padding-right: 20px;
+	padding-top: 3.125rem;
 }
 
 .c-card__wrap {
 	display: block;
 	margin: auto;
 	max-width: 33.75rem;
-	padding-left: 20px;
-	padding-right: 20px;
 }
 
 .c-card__picture-box {
@@ -2877,11 +3190,18 @@ html {
 }
 
 .c-card__title {
+	font-size: 1.375rem;
 	padding-top: 1.25rem;
 }
 
 .card__box {
+	margin-right: 0rem;
+	margin-top: 2.8125rem;
 	width: 100%;
+}
+
+.card__box:nth-child(-n+3) {
+	margin-top: 2.8125rem;
 }
 
 .mv-top__sub {
@@ -2914,7 +3234,7 @@ html {
 }
 
 .measures__title {
-	font-size: 1.375rem;
+	font-size: 1.5rem;
 	justify-content: center;
 }
 
@@ -2981,12 +3301,17 @@ html {
 	padding: 3.125rem 1.25rem;
 }
 
+.news__title {
+	font-size: 1.5rem;
+	padding-bottom: 5.625rem;
+}
+
 .news__day {
 	font-size: 1rem;
 }
 
-.news__comment {
-	font-size: 1.125rem;
+.news__heading {
+	font-size: 1rem;
 }
 
 .opinion__inner {
@@ -3036,7 +3361,7 @@ html {
 }
 
 .flow__title {
-	font-size: 1.75rem;
+	font-size: 1.5rem;
 }
 
 .flow__text {
@@ -3138,11 +3463,14 @@ html {
 }
 
 .recommendation__continer {
+	align-items: flex-start;
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: start;
 }
 
 .recommendation__box {
+	flex-direction: column;
 	margin-right: 1.5625rem;
 	margin-top: 2.1875rem;
 	max-width: none;
@@ -3154,6 +3482,10 @@ html {
 }
 
 .recommendation__box:nth-child(2n) {
+	margin-right: 0rem;
+}
+
+.recommendation__box:last-child {
 	margin-right: 0rem;
 }
 
@@ -3176,6 +3508,8 @@ html {
 }
 
 .receive__bgbox {
+	margin: auto;
+	max-width: 40rem;
 	width: 100%;
 }
 
@@ -3183,6 +3517,15 @@ html {
 	margin-bottom: 5.625rem;
 	padding-left: 20px;
 	padding-right: 20px;
+}
+
+.receive__bgbox:last-child .receive__box:last-child {
+	margin-bottom: 0rem;
+}
+
+.receive__text {
+	padding-bottom: 2.5rem;
+	padding-top: 2.8125rem;
 }
 
 .self-sub {
@@ -3209,7 +3552,6 @@ html {
 	padding-bottom: 4.375rem;
 	padding-left: 20px;
 	padding-right: 20px;
-	padding-top: 3.75rem;
 	width: 100%;
 }
 
@@ -3366,6 +3708,11 @@ html {
 	text-align: center;
 }
 
+.effect-list__list {
+	max-width: none;
+	padding-top: 0rem;
+}
+
 .effect-list__item {
 	text-align: center;
 	width: 100%;
@@ -3424,6 +3771,18 @@ html {
 	padding-bottom: 0.625rem;
 }
 
+.moneytable__number span {
+	font-size: 1.25rem;
+}
+
+.moneytable__money {
+	font-size: 0.875rem;
+}
+
+.moneytable__money span {
+	font-size: 1.25rem;
+}
+
 .moneytable__text {
 	line-height: 1.5;
 	padding-bottom: 1.875rem;
@@ -3444,6 +3803,15 @@ html {
 	display: block;
 }
 
+.sp-treatment-flow__warp {
+	display: flex;
+}
+
+.sp-treatment-flow__title {
+	padding-left: 1.875rem;
+	padding-top: 0rem;
+}
+
 .ban__inner {
 	max-width: 40rem;
 	padding-left: 20px;
@@ -3451,17 +3819,20 @@ html {
 }
 
 .ban__wrap {
+	padding-bottom: 3.1875rem;
 	padding-left: 20px;
 	padding-right: 20px;
+	padding-top: 2.875rem;
 }
 
 .ban__title {
+	font-size: 1.5rem;
 	padding-left: 0rem;
 }
 
 .ban__title span {
 	display: block;
-	font-size: 0.875rem;
+	font-size: 0.75rem;
 	padding-left: 0rem;
 }
 
@@ -3508,7 +3879,8 @@ html {
 }
 
 .facility__inner {
-	max-width: 40rem;
+	max-width: 33.75rem;
+	padding-bottom: 4.375rem;
 	padding-left: 20px;
 	padding-right: 20px;
 }
@@ -3525,8 +3897,20 @@ html {
 	padding-right: 20px;
 }
 
+.company__td {
+	width: 30%;
+}
+
 .company__th {
-	font-size: 1rem;
+	font-size: 0.875rem;
+}
+
+.company__br {
+	display: block;
+}
+
+.company__th span {
+	display: none;
 }
 
 .staf__inner {
@@ -3563,6 +3947,101 @@ html {
 .staf__name span {
 	font-size: 0.875rem;
 	padding-left: 0.625rem;
+}
+
+.archive-list__inner {
+	max-width: 40rem;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-top: 3.75rem;
+}
+
+.wp-pagenavi {
+	margin-left: 1.25rem;
+	margin-right: 1.25rem;
+	max-width: 33.75rem;
+}
+
+.wp-pagenavi a,
+.wp-pagenavi span {
+	padding: 0.625rem 0.9375rem;
+}
+
+.wp-pagenavi a,
+.wp-pagenavi span {
+	padding: 0.4375rem 0.75rem;
+}
+
+.last,
+.larger,
+.current,
+.nextpostslink,
+.smaller,
+.page,
+.first,
+.previouspostslink {
+	font-size: 0.75rem;
+}
+
+.single__inner {
+	max-width: 40rem;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+.single__title {
+	font-size: 1.75rem;
+}
+
+.single__wrap {
+	padding-top: 1.875rem;
+}
+
+.single__wrap h2 {
+	font-size: 1.375rem;
+	margin-top: 2.5rem;
+}
+
+.single__wrap h3 {
+	font-size: 1.125rem;
+	margin-top: 2.5rem;
+}
+
+.single__wrap h4 {
+	font-size: 0.875rem;
+	margin-top: 2rem;
+}
+
+.single__wrap h5 {
+	margin-top: 1.75rem;
+}
+
+.single__wrap h6 {
+	margin-top: 1.375rem;
+}
+
+.single__wrap p {
+	margin-top: 1.75rem;
+}
+
+.single__wrap img {
+	max-width: 40rem;
+}
+
+.error__main {
+	margin: auto;
+	max-width: 40rem;
+	padding-left: 20px;
+	padding-right: 20px;
+	width: 100%;
+}
+
+.error__container h1 {
+	font-size: 1.5rem;
+}
+
+.error__container p {
+	font-size: 1rem;
 }
 
 .hidden-sp {
