--- a/sass/module/_footer.scss
+++ b/sass/module/_footer.scss
@@ -32,10 +32,12 @@
     }
 }
 
-.footer__mail-btn,
-.footer__tell-box {
+.footer__mail-btn {
     max-width: rem(850);
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     @include mq("sp") {
         max-width: none;
@@ -44,59 +46,138 @@
 
 
 .footer__mail-btn {
-    padding-right: rem(39);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: rem(78);
+    background-color: $white;
+    box-shadow: 0px 5px 16px 2px rgba(0, 0, 0, 0.13);
 
     @include mq("sp") {
-        padding-right: rem(0);
+        margin-right: rem(0);
     }
 }
 
 .footer__tell-box {
-    padding-left: rem(39);
-
-    @include mq("sp") {
-        padding-left: rem(0);
-    }
+    max-width: rem(850);
+    width: 100%;
 }
 
-.footer__mail-btn a {
-    padding: rem(42.954) rem(0);
-
-    @include mq("sp") {
-        padding: rem(30.954) rem(20);
-    }
+.footer__mail-btn:hover,
+.footer__tell-btn:hover {
+    opacity: 0.7;
 }
 
-.footer__tell-btn a {
-    padding: rem(32) rem(0);
-
-    @include mq("sp") {
-        padding: rem(20) rem(0);
-    }
-}
-
-.footer__mail-btn a,
-.footer__tell-btn a {
+.footer__tell-btn {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: $white;
-    border-radius: rem(100);
+    background-color: $white;
+    box-shadow: 0px 5px 16px 2px rgba(0, 0, 0, 0.13);
 }
 
-.footer__mail-icon img,
-.footer__tell-icon img {
-    max-width: rem(44);
+
+.footer__mail-btn a,
+.footer__tell-btn a {
+    width: rem(850);
     width: 100%;
-    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: rem(100);
+    padding: rem(32) rem(0);
 
     @include mq("sp") {
-        max-width: rem(30);
+        padding: rem(20) rem(20);
     }
 }
 
+.footer__beauty-icon {
+    display: inline-block;
+    max-width: rem(53);
+    width: 100%;
+    height: rem(50);
+
+    @include mq("sp") {
+        max-width: rem(40);
+        height: rem(40);
+    }
+}
+
+.footer__beauty-icon img {
+    max-width: rem(53);
+    width: 100%;
+    height: rem(50);
+
+    @include mq("sp") {
+        max-width: rem(40);
+        height: rem(40);
+        margin: auto;
+    }
+}
+
+
+.footer__tell-icon {
+    display: inline-block;
+    max-width: rem(44);
+    width: 100%;
+    height: rem(50);
+
+    @include mq("sp") {
+        max-width: rem(30);
+        height: rem(40);
+    }
+}
+
+.footer__tell-icon img {
+    max-width: rem(44);
+    width: 100%;
+    height: rem(50);
+
+    @include mq("sp") {
+        width: 100%;
+        max-width: rem(30);
+        height: rem(40);
+    }
+}
+
+.footer__mail-icon {
+    display: inline-block;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    max-width: rem(44);
+    width: 100%;
+    height: rem(50);
+
+    @include mq("sp") {
+        max-width: rem(34);
+        height: rem(40);
+    }
+}
+
+.footer__mail-icon img {
+    width: 100%;
+    margin-top: rem(5);
+    height: rem(40);
+
+    @include mq("sp") {
+        max-width: rem(34);
+        margin: auto;
+        height: rem(24);
+    }
+}
+
+
 .footer__btn-text {
+    font-size: rem(20);
+    font-weight: $medium;
     padding-left: rem(30);
+
+    @include mq("sp") {
+        font-size: rem(16);
+        padding-left: rem(20);
+    }
 }
 
 .footer__tell-text {
@@ -106,6 +187,7 @@
     line-height: 3;
 
     @include mq("sp") {
+        font-size: rem(12);
         line-height: 1.7;
         padding: rem(20) rem(0);
     }
@@ -124,7 +206,7 @@
         padding-left: $padding-sp;
         padding-right: $padding-sp;
         padding-top: rem(50);
-        padding-bottom: rem(60);
+        padding-bottom: rem(0);
     }
 }
 
@@ -186,4 +268,14 @@
 
 .footer__comment a {
     border-bottom: rem(1) solid $text-color;
+}
+
+// 電話番号パソコン・タブレットで発信させない記述CSS
+
+@media (min-width: 751px) {
+    a[href*="tel:"] {
+        pointer-events: none;
+        cursor: default;
+        text-decoration: none;
+    }
 }
