--- a/sass/module/_header.scss
+++ b/sass/module/_header.scss
@@ -16,6 +16,7 @@
     height: inherit;
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .btn__sub {
@@ -31,16 +32,20 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: relative;
 }
 
-.header__btn--leyout {
+.header__btn {
+    max-width: rem(495);
+    width: 100%;
     margin-right: rem(80);
-}
-
-.header__right {
     display: flex;
     align-items: center;
+    justify-content: right;
+
+    @include mq("sp") {
+        max-width: none;
+        width: auto;
+    }
 }
 
 
@@ -66,7 +71,7 @@
     @include mq("sp") {
         width: rem(28);
         height: auto;
-        margin-right: rem(70);
+        margin-right: rem(-15);
     }
 }
 
@@ -76,7 +81,7 @@
 .header__hamburger-button {
     display: block;
     position: absolute;
-    top: rem(25);
+    top: rem(38);
     right: rem(10);
     width: rem(42);
     height: rem(42);
@@ -86,7 +91,7 @@
     text-align: center;
 
     @include mq("sp") {
-        top: rem(5);
+        top: rem(24);
         right: rem(8);
     }
 }
@@ -131,14 +136,14 @@
 }
 
 .header__hamburger-button.active span:nth-child(1) {
-    top: rem(16);
+    top: rem(14);
     left: rem(6);
     transform: rotate(-45deg);
 }
 
 .header__hamburger-button.active span:nth-child(2),
 .header__hamburger-button.active span:nth-child(3) {
-    top: 16px;
+    top: rem(14);
     transform: rotate(45deg);
 }
 
@@ -181,4 +186,5 @@
 
 .instagram {
     width: rem(68);
+    height: auto;
 }
