--- a/sass/page/information/_facility.scss
+++ b/sass/page/information/_facility.scss
@@ -7,9 +7,10 @@
     padding-bottom: rem(168);
 
     @include mq("sp") {
-        max-width: rem(640);
+        max-width: rem(540);
         padding-left: $padding-sp;
         padding-right: $padding-sp;
+        padding-bottom: rem(70);
     }
 }
 
