--- a/sass/page/top/_content.scss
+++ b/sass/page/top/_content.scss
@@ -46,8 +46,12 @@
     text-align: center;
 }
 
+.content__btn-box {
+    margin-top: auto;
+}
+
 .content__box:nth-child(3) .content__text {
-    padding-bottom: rem(154.38);
+    padding-bottom: rem(154.382);
 }
 
 .content__text {
@@ -63,15 +67,27 @@
     flex: 2;
 }
 
+
+.content__btn-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.content__btn--color {
+    background: $white;
+    color: $b-btn_back;
+}
+
 .content__btn {
     max-width: rem(435);
     width: 100%;
-    margin: 0 auto;
-    background: white;
     padding: rem(20) rem(0);
-    box-shadow: 6px 6px 10px 0px rgba(0, 0, 0, 0.16);
+    border-radius: rem(50);
+    box-shadow: 0px 5px 16px 2px rgba(0, 0, 0, 0.16);
 }
 
-.content__text--color {
-    color: $b-btn_back;
+.content__btn:hover {
+    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.5), 0 0 50px rgba(128, 128, 128, 0.6);
+    border-color: transparent;
 }
