--- a/sass/page/winback/_ban.scss
+++ b/sass/page/winback/_ban.scss
@@ -22,6 +22,8 @@
     border-radius: rem(25);
 
     @include mq("sp") {
+        padding-top: rem(46);
+        padding-bottom: rem(51);
         padding-right: $padding-sp;
         padding-left: $padding-sp;
     }
@@ -36,6 +38,7 @@
     padding-left: rem(30);
 
     @include mq("sp") {
+        font-size: rem(24);
         padding-left: rem(0);
     }
 }
@@ -48,7 +51,7 @@
     @include mq("sp") {
         display: block;
         padding-left: rem(0);
-        font-size: rem(14);
+        font-size: rem(12);
     }
 }
 
