--- a/sass/page/winback/_money-table.scss
+++ b/sass/page/winback/_money-table.scss
@@ -56,7 +56,7 @@
 .moneytable__box {
     width: 100%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     line-height: 1.7;
     padding-bottom: rem(30);
 
@@ -65,6 +65,10 @@
         padding-bottom: rem(30);
         line-height: 1.5;
     }
+}
+
+.moneytable__box:last-child {
+    padding-bottom: rem(0);
 }
 
 .moneytable__number {
@@ -86,11 +90,19 @@
     width: 100%;
     display: inline-block;
     font-size: rem(22);
+
+    @include mq("sp") {
+        font-size: rem(20);
+    }
 }
 
 .moneytable__money {
     width: 100%;
     font-size: rem(16);
+
+    @include mq("sp") {
+        font-size: rem(14);
+    }
 }
 
 .moneytable__money span {
@@ -101,6 +113,10 @@
     letter-spacing: rem(1.8);
     font-weight: $medium;
     text-align: left;
+
+    @include mq("sp") {
+        font-size: rem(20);
+    }
 }
 
 .moneytable__money sub {
